# django-tdd-docker

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yml
app/: Dockerfile  Dockerfile.prod  requirements.txt
app/drf_project/: settings.py  urls.py
app/movies/: urls.py  views.py
app/movies/migrations/: 0001_initial.py  0002_movie.py
app/tests/movies/: conftest.py  test_views.py
